Add "enableRecipe" option.